[gd_scene load_steps=27 format=2]

[ext_resource path="res://Game/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Mcbungus-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Basic bars & buttons/HP bars/energy 6 of 6.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Yagitudeh.otf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/sprites/UI_Toolbar.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/Fox_Down.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/Status_Love.png" type="Texture" id=7]
[ext_resource path="res://assets/Basic bars & buttons/coin.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/Status_Exclamation.png" type="Texture" id=9]
[ext_resource path="res://assets/Basic bars & buttons/UI_SquareFrame.png" type="Texture" id=10]
[ext_resource path="res://assets/Basic bars & buttons/restart.png" type="Texture" id=11]
[ext_resource path="res://assets/sounds/tutorial.mp3" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/retry.mp3" type="AudioStream" id=14]

[sub_resource type="DynamicFont" id=14]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 610, 320 ), Vector2( 610, 300 ), Vector2( 610, 320 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/burbuja:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/character:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.8, 2.2 ), Vector2( 2.2, 1.8 ), Vector2( 2, 2 ), Vector2( 1.9, 2.1 ), Vector2( 2, 2 ), Vector2( 2.1, 1.9 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "point"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("player/burbuja:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/burbuja:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/burbuja:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 649, 314 ), Vector2( 800, 192 ), Vector2( 800, 192 ), Vector2( 649, 314 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("player/character:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 610, 320 ), Vector2( 610, 280 ), Vector2( 610, 320 ), Vector2( 610, 320 ), Vector2( 610, 280 ), Vector2( 610, 320 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("player/character:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.7, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.8, 2.2 ), Vector2( 2.2, 1.8 ), Vector2( 1.8, 2.2 ), Vector2( 2.2, 1.8 ), Vector2( 2, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("player/burbuja:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "wrong"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("player/burbuja:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/burbuja:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 2, 2 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/burbuja:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 649, 314 ), Vector2( 800, 192 ), Vector2( 800, 192 ), Vector2( 649, 314 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("player/character:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 610, 320 ), Vector2( 610, 280 ), Vector2( 610, 320 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("player/character:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.8, 2.2 ), Vector2( 2, 2 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("player/burbuja:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.294118, 0.294118, 0.294118, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/restart:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 610, 320 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/restart/retry:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "go_in"
tracks/0/type = "value"
tracks/0/path = NodePath("letters:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 400 ), Vector2( 0, 400 ), Vector2( 0, -60 ), Vector2( 0, -60 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasModulate:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/restart:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "go_out"
tracks/0/type = "value"
tracks/0/path = NodePath("letters:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ), Vector2( 0, -100 ), Vector2( 0, 400 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasModulate:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/restart:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "restart"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.294118, 0.294118, 0.294118, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/restart:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 610, -400 ), Vector2( 610, 320 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/restart:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/restart/retry:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AudioStreamPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3, 5.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=16]
resource_name = "restart_press"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.294118, 0.294118, 0.294118, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/restart:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 610, 320 ), Vector2( 610, -400 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "tutorial"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("AudioStreamPlayer:stream")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 9.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 100
outline_size = 10
outline_color = Color( 0, 0.917647, 0.639216, 1 )
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.294118, 0.294118, 0.294118, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="restart" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 610, 320 )
scale = Vector2( 2.6375, 2.72289 )
texture = ExtResource( 10 )

[node name="retry" type="Button" parent="CanvasLayer/restart"]
margin_left = -39.0521
margin_top = 41.1328
margin_right = 36.9479
margin_bottom = 110.133
icon = ExtResource( 11 )
flat = true
expand_icon = true

[node name="Label" type="Label" parent="CanvasLayer/restart"]
margin_left = 8.72038
margin_top = -29.3805
margin_right = 53.7204
margin_bottom = 55.6195
custom_colors/font_color = Color( 0.184314, 0.184314, 0.184314, 1 )
custom_fonts/font = SubResource( 14 )
text = "0"

[node name="Sprite" type="Sprite" parent="CanvasLayer/restart"]
position = Vector2( -28.8152, -8.07965 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1206.0
margin_bottom = 726.0
color = Color( 0.270588, 0.666667, 0.266667, 1 )

[node name="player" type="Node2D" parent="."]

[node name="burbuja" type="Sprite" parent="player"]
position = Vector2( 649, 314 )
rotation = 0.120428
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="character" type="Sprite" parent="player"]
position = Vector2( 610, 320 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="character" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 9 )
anims/point = SubResource( 10 )
anims/wrong = SubResource( 11 )

[node name="letters_anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 15 )
anims/go_in = SubResource( 2 )
anims/go_out = SubResource( 3 )
anims/restart = SubResource( 13 )
anims/restart_press = SubResource( 16 )
anims/tutorial = SubResource( 17 )

[node name="letters" type="Node2D" parent="."]
position = Vector2( 0, 400 )

[node name="Sprite" type="Sprite" parent="letters"]
position = Vector2( 343, 590 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="letters"]
position = Vector2( 614, 590 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="letters"]
position = Vector2( 890, 590 )
texture = ExtResource( 10 )

[node name="Button1" type="Button" parent="letters"]
margin_left = 285.0
margin_top = 534.0
margin_right = 402.0
margin_bottom = 639.0
focus_mode = 0
custom_colors/font_color = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "A"
flat = true

[node name="Button2" type="Button" parent="letters"]
margin_left = 555.0
margin_top = 534.0
margin_right = 672.0
margin_bottom = 639.0
focus_mode = 0
custom_colors/font_color = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "B"
flat = true

[node name="Button3" type="Button" parent="letters"]
margin_left = 831.0
margin_top = 534.0
margin_right = 948.0
margin_bottom = 639.0
focus_mode = 0
custom_colors/font_color = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "C"
flat = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 253.5, 76 )
scale = Vector2( 1.58437, 1.4902 )
texture = ExtResource( 5 )

[node name="HP_BAR" type="Sprite" parent="."]
position = Vector2( 254, 72 )
scale = Vector2( 0.4, 0.3 )
texture = ExtResource( 3 )

[node name="score" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="score"]
position = Vector2( 923, 68 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="score"]
margin_left = 1009.0
margin_top = 20.0
margin_right = 1069.0
margin_bottom = 125.0
custom_colors/font_color = Color( 0.156863, 0.270588, 0.709804, 1 )
custom_fonts/font = SubResource( 12 )
text = "1"

[node name="Timer" type="Timer" parent="."]
process_mode = 0

[node name="countdown" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 585.0
margin_top = 277.0
margin_right = 633.0
margin_bottom = 382.0
custom_colors/font_color = Color( 0.176471, 0.176471, 0.176471, 1 )
custom_fonts/font = SubResource( 7 )
text = "1"

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="pressed" from="CanvasLayer/restart/retry" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="character" to="." method="_on_character_animation_finished"]
[connection signal="animation_finished" from="letters_anim" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="letters_anim" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="pressed" from="letters/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="letters/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="letters/Button3" to="." method="_on_Button3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
